--- a/source_code/feature_extraction_and_model.ipynb
+++ b/source_code/feature_extraction_and_model.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "36cb25df-e95c-4cf4-81ea-75498578aeeb",
       "metadata": {
         "id": "36cb25df-e95c-4cf4-81ea-75498578aeeb"
@@ -370,7 +370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "5a54e196",
       "metadata": {
         "id": "5a54e196"
@@ -393,7 +393,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "a5496aab",
       "metadata": {
         "id": "a5496aab"
@@ -1257,7 +1257,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "2526f91a",
       "metadata": {
         "id": "2526f91a"
@@ -2251,6 +2251,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Training Find best parameters"
+      ],
+      "metadata": {
+        "id": "wesuof6nd53e"
+      },
+      "id": "wesuof6nd53e"
+    },
+    {
       "cell_type": "code",
       "source": [
         "import xgboost as xgb\n",
@@ -2314,38 +2324,7 @@
         "print(\"Best Parameters:\", grid.best_params_)\n",
         "\n",
         "# Best model\n",
-        "best_model = grid.best_estimator_\n",
-        "\n",
-        "# ----------------------------\n",
-        "# 6) Predict using best model\n",
-        "# ----------------------------\n",
-        "y_pred = best_model.predict(X_test)\n",
-        "y_pred_proba = best_model.predict_proba(X_test)[:, 1]\n",
-        "\n",
-        "print(f\"Probability Target:{y_pred_proba}\")\n",
-        "print(f\"Label test data:{y_pred}\")\n",
-        "\n",
-        "# ----------------------------\n",
-        "# 7) Metrics\n",
-        "# ----------------------------\n",
-        "acc = accuracy_score(y_test, y_pred)\n",
-        "prec = precision_score(y_test, y_pred)\n",
-        "rec = recall_score(y_test, y_pred)\n",
-        "f1 = f1_score(y_test, y_pred)\n",
-        "auc = roc_auc_score(y_test, y_pred_proba)\n",
-        "cm = confusion_matrix(y_test, y_pred)\n",
-        "\n",
-        "# ----------------------------\n",
-        "# 8) Print results\n",
-        "# ----------------------------\n",
-        "print(\"=== XGBoost Evaluation Results (Best Model) ===\")\n",
-        "print(f\"Accuracy       : {acc:.4f}\")\n",
-        "print(f\"Precision      : {prec:.4f}\")\n",
-        "print(f\"Recall         : {rec:.4f}\")\n",
-        "print(f\"F1-Score       : {f1:.4f}\")\n",
-        "print(f\"AUC-Score      : {auc:.4f}\")\n",
-        "print(\"\\nConfusion Matrix:\")\n",
-        "print(cm)"
+        "best_model = grid.best_estimator_"
       ],
       "metadata": {
         "id": "VHQSSac2Rvbu",
@@ -2382,6 +2361,104 @@
             "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/joblib/parallel.py\u001b[0m in \u001b[0;36m_get_outputs\u001b[0;34m(self, iterator, pre_dispatch)\u001b[0m\n\u001b[1;32m   1680\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1681\u001b[0m             \u001b[0;32mwith\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_backend\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mretrieval_context\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1682\u001b[0;31m                 \u001b[0;32myield\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_retrieve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1683\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1684\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mGeneratorExit\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/joblib/parallel.py\u001b[0m in \u001b[0;36m_retrieve\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1798\u001b[0m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jobs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_status\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mTASK_PENDING\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1799\u001b[0m                 ):\n\u001b[0;32m-> 1800\u001b[0;31m                     \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.01\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1801\u001b[0m                     \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1802\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Save Model"
+      ],
+      "metadata": {
+        "id": "8A0VSRDDdmh-"
+      },
+      "id": "8A0VSRDDdmh-"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "best_model.save_model('xgboost_model.bin')"
+      ],
+      "metadata": {
+        "id": "OBRDoXFodqm9"
+      },
+      "id": "OBRDoXFodqm9",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Load Model xgboost"
+      ],
+      "metadata": {
+        "id": "GHEKdI1K3F2s"
+      },
+      "id": "GHEKdI1K3F2s"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import xgboost as xgb\n",
+        "from sklearn.model_selection import GridSearchCV, StratifiedKFold\n",
+        "from sklearn.metrics import (\n",
+        "    accuracy_score, precision_score, recall_score,\n",
+        "    f1_score, roc_auc_score, confusion_matrix\n",
+        ")\n",
+        "best_model = xgb.XGBClassifier()\n",
+        "best_model.load_model('xgboost_model.bin')\n",
+        "# ----------------------------\n",
+        "# 6) Predict using best model\n",
+        "# ----------------------------\n",
+        "y_pred = best_model.predict(X_test)\n",
+        "y_pred_proba = best_model.predict_proba(X_test)[:, 1]\n",
+        "\n",
+        "print(f\"Probability Target:{y_pred_proba}\")\n",
+        "print(f\"Label test data:{y_pred}\")\n",
+        "\n",
+        "# ----------------------------\n",
+        "# 7) Metrics\n",
+        "# ----------------------------\n",
+        "acc = accuracy_score(y_test, y_pred)\n",
+        "prec = precision_score(y_test, y_pred)\n",
+        "rec = recall_score(y_test, y_pred)\n",
+        "f1 = f1_score(y_test, y_pred)\n",
+        "auc = roc_auc_score(y_test, y_pred_proba)\n",
+        "cm = confusion_matrix(y_test, y_pred)\n",
+        "\n",
+        "# ----------------------------\n",
+        "# 8) Print results\n",
+        "# ----------------------------\n",
+        "print(\"=== XGBoost Evaluation Results (Best Model) ===\")\n",
+        "print(f\"Accuracy       : {acc:.4f}\")\n",
+        "print(f\"Precision      : {prec:.4f}\")\n",
+        "print(f\"Recall         : {rec:.4f}\")\n",
+        "print(f\"F1-Score       : {f1:.4f}\")\n",
+        "print(f\"AUC-Score      : {auc:.4f}\")\n",
+        "print(\"\\nConfusion Matrix:\")\n",
+        "print(cm)"
+      ],
+      "metadata": {
+        "id": "5e8tpvP73Cpd",
+        "outputId": "a0a45527-a5b9-424d-bf3d-dd79d8b835b0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        }
+      },
+      "id": "5e8tpvP73Cpd",
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'best_model' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-4198280017.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbest_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'xgboost_model.bin'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'best_model' is not defined"
           ]
         }
       ]
@@ -2427,45 +2504,6 @@
       "id": "zqcSGBs8d-57",
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Load Model xgboost"
-      ],
-      "metadata": {
-        "id": "GHEKdI1K3F2s"
-      },
-      "id": "GHEKdI1K3F2s"
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "best_model.save_model('xgboost_model.bin')"
-      ],
-      "metadata": {
-        "id": "5e8tpvP73Cpd",
-        "outputId": "a0a45527-a5b9-424d-bf3d-dd79d8b835b0",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 141
-        }
-      },
-      "id": "5e8tpvP73Cpd",
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'best_model' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-4198280017.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbest_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'xgboost_model.bin'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'best_model' is not defined"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -3298,7 +3336,7 @@
         }
       },
       "id": "7MckA2IDVux3",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3438,7 +3476,7 @@
         "id": "ZsY5jDhGVyrC"
       },
       "id": "ZsY5jDhGVyrC",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3451,7 +3489,7 @@
         "id": "L-4MdCeQV2__"
       },
       "id": "L-4MdCeQV2__",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3470,7 +3508,7 @@
         "id": "FcPULd1MV4Dg"
       },
       "id": "FcPULd1MV4Dg",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
