--- a/source_code/feature_extraction_and_model.ipynb
+++ b/source_code/feature_extraction_and_model.ipynb
@@ -3642,13 +3642,13 @@
     {
       "cell_type": "code",
       "source": [
-        "print(f\"Accuracy:{float(result['accuracy'])}\")\n",
-        "print(f\"Precision:{result['tp']/(result['tp']+result['fp'])}\")\n",
-        "print(f\"Recall:{result['tp']/(result['tp']+result['fn'])}\")\n",
-        "print(f\"F1-score:{float(result['f1_score'])}\")\n",
-        "print(f\"AUC:{float(result['auroc'])}\")\n",
+        "print(f\"Accuracy: {float(result['accuracy'])}\")\n",
+        "print(f\"Precision: {result['tp']/(result['tp']+result['fp'])}\")\n",
+        "print(f\"Recall: {result['tp']/(result['tp']+result['fn'])}\")\n",
+        "print(f\"F1-score: {float(result['f1_score'])}\")\n",
+        "print(f\"AUC: {float(result['auroc'])}\")\n",
         "print(f\"\"\"Confusion Matrix:\n",
-        "{[[int(result['tp'],int(result['fp']))],[int(result['fn']),result['tn']]]}\"\"\")"
+        "{np.array([[int(result['tp']),int(result['fp'])],[int(result['fn']),int(result['tn'])]])}\"\"\")"
       ],
       "metadata": {
         "id": "CjJL8R-PWjJw"
