--- a/source_code/feature_extraction_and_model.ipynb
+++ b/source_code/feature_extraction_and_model.ipynb
@@ -2016,7 +2016,12 @@
         "print(f\"Accuracy: {accuracy_score(y_test, y_pred):.4f}\")\n",
         "print(f\"AUC: {roc_auc_score(y_test, y_proba):.4f}\")\n",
         "print(\"\\nClassification Report:\")\n",
-        "print(classification_report(y_test, y_pred, digits=4))"
+        "print(classification_report(y_test, y_pred, digits=4))\n",
+        "\n",
+        "cm = confusion_matrix(y_test, y_pred)\n",
+        "\n",
+        "print(\"\\nConfusion Matrix:\")\n",
+        "print(cm)"
       ]
     },
     {
