--- a/source_code/feature_extraction_and_model.ipynb
+++ b/source_code/feature_extraction_and_model.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 61,
       "id": "36cb25df-e95c-4cf4-81ea-75498578aeeb",
       "metadata": {
         "id": "36cb25df-e95c-4cf4-81ea-75498578aeeb"
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 62,
       "id": "63b0442d-548d-48e4-9385-5875345b39e2",
       "metadata": {
         "id": "63b0442d-548d-48e4-9385-5875345b39e2"
@@ -418,7 +418,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 63,
       "id": "e50ef12b",
       "metadata": {
         "colab": {
@@ -426,7 +426,7 @@
           "height": 206
         },
         "id": "e50ef12b",
-        "outputId": "37450b94-1d11-4139-a259-1401ab745eef"
+        "outputId": "5a0a7371-8037-49f3-8e5b-16fadaeb0d86"
       },
       "outputs": [
         {
@@ -449,7 +449,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1c0d1b02-0bae-49ca-b082-9a04bd17e4a0\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-2bc36ff9-647a-4cc8-8766-4ca40cd5b807\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -510,7 +510,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1c0d1b02-0bae-49ca-b082-9a04bd17e4a0')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2bc36ff9-647a-4cc8-8766-4ca40cd5b807')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -562,12 +562,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-1c0d1b02-0bae-49ca-b082-9a04bd17e4a0 button.colab-df-convert');\n",
+              "        document.querySelector('#df-2bc36ff9-647a-4cc8-8766-4ca40cd5b807 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-1c0d1b02-0bae-49ca-b082-9a04bd17e4a0');\n",
+              "        const element = document.querySelector('#df-2bc36ff9-647a-4cc8-8766-4ca40cd5b807');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -587,8 +587,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-3f9ee3c2-f6d2-4c0b-8542-409528a0e5fe\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3f9ee3c2-f6d2-4c0b-8542-409528a0e5fe')\"\n",
+              "    <div id=\"df-31eb2125-8eea-4202-97b5-1f9732e6f0d8\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-31eb2125-8eea-4202-97b5-1f9732e6f0d8')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -707,7 +707,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-3f9ee3c2-f6d2-4c0b-8542-409528a0e5fe button');\n",
+              "            document.querySelector('#df-31eb2125-8eea-4202-97b5-1f9732e6f0d8 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -724,7 +724,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 63
         }
       ],
       "source": [
@@ -1334,7 +1334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 64,
       "id": "6863df9f",
       "metadata": {
         "colab": {
@@ -1342,7 +1342,7 @@
           "height": 533
         },
         "id": "6863df9f",
-        "outputId": "918b3172-ce71-49c2-ac5d-b9b86093b8f5"
+        "outputId": "f827b633-a731-47ce-947e-bea9c939a194"
       },
       "outputs": [
         {
@@ -1416,7 +1416,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-30b81ca8-2a73-4331-9f40-789e1890af6c\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-a96b75db-0921-4a2c-ba1d-96a8c540c380\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1586,7 +1586,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-30b81ca8-2a73-4331-9f40-789e1890af6c')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a96b75db-0921-4a2c-ba1d-96a8c540c380')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1638,12 +1638,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-30b81ca8-2a73-4331-9f40-789e1890af6c button.colab-df-convert');\n",
+              "        document.querySelector('#df-a96b75db-0921-4a2c-ba1d-96a8c540c380 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-30b81ca8-2a73-4331-9f40-789e1890af6c');\n",
+              "        const element = document.querySelector('#df-a96b75db-0921-4a2c-ba1d-96a8c540c380');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1663,8 +1663,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-565fcb50-c646-4de7-944d-22b4a7194eb5\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-565fcb50-c646-4de7-944d-22b4a7194eb5')\"\n",
+              "    <div id=\"df-7516fa66-7106-45ce-b757-4ccb0a6ee9fe\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7516fa66-7106-45ce-b757-4ccb0a6ee9fe')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1783,7 +1783,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-565fcb50-c646-4de7-944d-22b4a7194eb5 button');\n",
+              "            document.querySelector('#df-7516fa66-7106-45ce-b757-4ccb0a6ee9fe button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -1799,7 +1799,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 64
         }
       ],
       "source": [
@@ -2416,8 +2416,9 @@
         "y_pred = best_model.predict(X_test)\n",
         "y_pred_proba = best_model.predict_proba(X_test)[:, 1]\n",
         "\n",
-        "print(f\"Probability Target:{y_pred_proba}\")\n",
-        "print(f\"Label test data:{y_pred}\")\n",
+        "print(f\"Probability predict Target:{y_pred_proba}\")\n",
+        "print(f\"Label predict Target data:{list(map(int,y_pred))}\")\n",
+        "print(f\"Label test data:          {list(y_test)}\")\n",
         "\n",
         "# ----------------------------\n",
         "# 7) Metrics\n",
@@ -2443,32 +2444,25 @@
       ],
       "metadata": {
         "id": "5e8tpvP73Cpd",
-        "outputId": "fdf2ebc8-3d89-46ee-934e-0de7f4e9a249",
+        "outputId": "8b2e1c88-2bce-4f80-a62f-3a42bb7bdd96",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "5e8tpvP73Cpd",
-      "execution_count": null,
+      "execution_count": 65,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.12/dist-packages/xgboost/sklearn.py:1124: UserWarning: [16:31:00] WARNING: /workspace/src/c_api/c_api.cc:1511: Unknown file format: `bin`. Using UBJSON (`ubj`) as a guess.\n",
-            "  self.get_booster().load_model(fname)\n"
-          ]
-        },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Probability Target:[0.01300209 0.05245703 0.0788151  0.97523546 0.01170991 0.67415655\n",
+            "Probability predict Target:[0.01300209 0.05245703 0.0788151  0.97523546 0.01170991 0.67415655\n",
             " 0.08601129 0.96671563 0.91353697 0.8675618  0.87623954 0.9609004\n",
             " 0.31296337 0.05181819 0.0078209  0.11040487 0.00814284 0.4617905\n",
             " 0.30325338 0.67295194 0.90841955 0.62402064 0.01944051 0.7723695\n",
             " 0.01131255 0.89155066]\n",
-            "Label test data:[0 0 0 1 0 1 0 1 1 1 1 1 0 0 0 0 0 0 0 1 1 1 0 1 0 1]\n",
+            "Label predict Target data:[0, 0, 0, 1, 0, 1, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 0, 1, 0, 1]\n",
+            "Label test data:          [0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 0, 1, 0, 1]\n",
             "=== XGBoost Evaluation Results (Best Model) ===\n",
             "Accuracy       : 0.9615\n",
             "Precision      : 1.0000\n",
@@ -2479,6 +2473,14 @@
             "Confusion Matrix:\n",
             "[[13  0]\n",
             " [ 1 12]]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.12/dist-packages/xgboost/sklearn.py:1124: UserWarning: [11:01:13] WARNING: /workspace/src/c_api/c_api.cc:1511: Unknown file format: `bin`. Using UBJSON (`ubj`) as a guess.\n",
+            "  self.get_booster().load_model(fname)\n"
           ]
         }
       ]
@@ -4166,9 +4168,9 @@
         "y_pred = best_model_lightgbm.predict(X_test)\n",
         "y_pred_proba = best_model_lightgbm.predict_proba(X_test)[:, 1]\n",
         "\n",
-        "print(f\"Probability Target:{y_pred_proba}\")\n",
-        "print(f\"Label test data:{y_pred}\")\n",
-        "\n",
+        "print(f\"Probability predict Target:{y_pred_proba}\")\n",
+        "print(f\"Label predict Target data:{list(map(int,y_pred))}\")\n",
+        "print(f\"Label test data:          {list(y_test)}\")\n",
         "# ----------------------------\n",
         "# 7) Metrics\n",
         "# ----------------------------\n",
@@ -4196,23 +4198,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BlvkD2BE7rHK",
-        "outputId": "56c1cd5d-a26f-4bae-a60e-1d68fa275b47"
+        "outputId": "4d6a908b-09ca-43e4-b7e0-9838f8c95606"
       },
       "id": "BlvkD2BE7rHK",
-      "execution_count": 50,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Probability Target:[3.72737074e-07 8.16773370e-04 5.92720989e-05 9.99952861e-01\n",
+            "Probability predict Target:[3.72737074e-07 8.16773370e-04 5.92720989e-05 9.99952861e-01\n",
             " 4.52592862e-07 5.87657640e-01 8.17044574e-04 9.99500995e-01\n",
             " 9.99785971e-01 9.99866634e-01 8.85877703e-01 9.99759276e-01\n",
             " 2.53452520e-02 2.16186551e-06 2.83315106e-09 3.96387271e-05\n",
             " 1.83033915e-08 4.16533502e-02 1.94116505e-03 4.35658395e-01\n",
             " 8.97783869e-01 9.58337161e-01 2.19571653e-05 9.95485522e-01\n",
             " 4.30228761e-07 6.77421555e-01]\n",
-            "Label test data:[0 0 0 1 0 1 0 1 1 1 1 1 0 0 0 0 0 0 0 0 1 1 0 1 0 1]\n",
+            "Label predict Target data:[0, 0, 0, 1, 0, 1, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 1]\n",
+            "Label test data:          [0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 0, 1, 0, 1]\n",
             "=== LightGBM Evaluation Results (Best Model) ===\n",
             "Accuracy       : 0.9231\n",
             "Precision      : 1.0000\n",
@@ -4261,12 +4264,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "6FGGzZpwJzmg",
-        "outputId": "f802020f-7a30-4114-ed94-bd0457265530",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "6FGGzZpwJzmg",
+        "outputId": "f802020f-7a30-4114-ed94-bd0457265530"
       },
       "id": "6FGGzZpwJzmg",
       "execution_count": 51,
