--- a/source_code/feature_extraction_and_model.ipynb
+++ b/source_code/feature_extraction_and_model.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "36cb25df-e95c-4cf4-81ea-75498578aeeb",
       "metadata": {
         "id": "36cb25df-e95c-4cf4-81ea-75498578aeeb"
@@ -21,7 +21,9 @@
       "source": [
         "import pandas as pd\n",
         "import re\n",
-        "import string"
+        "import string\n",
+        "\n",
+        "#Test Bug"
       ]
     },
     {
@@ -370,7 +372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "5a54e196",
       "metadata": {
         "id": "5a54e196"
@@ -393,7 +395,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "a5496aab",
       "metadata": {
         "id": "a5496aab"
@@ -1257,7 +1259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "2526f91a",
       "metadata": {
         "id": "2526f91a"
@@ -3450,7 +3452,7 @@
         }
       },
       "id": "7MckA2IDVux3",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3590,7 +3592,7 @@
         "id": "ZsY5jDhGVyrC"
       },
       "id": "ZsY5jDhGVyrC",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3603,7 +3605,7 @@
         "id": "L-4MdCeQV2__"
       },
       "id": "L-4MdCeQV2__",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3622,7 +3624,7 @@
         "id": "FcPULd1MV4Dg"
       },
       "id": "FcPULd1MV4Dg",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3728,7 +3730,7 @@
         "id": "PsSTTjPmWK4Y"
       },
       "id": "PsSTTjPmWK4Y",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3779,7 +3781,7 @@
         "outputId": "61b08513-9170-4ced-e88e-9f5c81de7ab9"
       },
       "id": "i8i0nSWEWk7o",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3857,7 +3859,7 @@
         "outputId": "3ee3b1e6-4919-4451-eec9-498c3635d22e"
       },
       "id": "OZ3oeXV4KrGp",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3926,7 +3928,7 @@
         "outputId": "201ec706-d051-4454-d298-1cfd9358ca5d"
       },
       "id": "CjJL8R-PWjJw",
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3980,7 +3982,7 @@
         "outputId": "8119ec81-4844-4817-9f95-ca3822df83be"
       },
       "id": "1CWPRyFrLOIR",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
