--- a/source_code/feature_extraction_and_model.ipynb
+++ b/source_code/feature_extraction_and_model.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "id": "36cb25df-e95c-4cf4-81ea-75498578aeeb",
       "metadata": {
         "id": "36cb25df-e95c-4cf4-81ea-75498578aeeb"
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "id": "63b0442d-548d-48e4-9385-5875345b39e2",
       "metadata": {
         "id": "63b0442d-548d-48e4-9385-5875345b39e2"
@@ -370,7 +370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "id": "5a54e196",
       "metadata": {
         "id": "5a54e196"
@@ -393,7 +393,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "id": "a5496aab",
       "metadata": {
         "id": "a5496aab"
@@ -418,7 +418,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "id": "e50ef12b",
       "metadata": {
         "colab": {
@@ -755,7 +755,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "id": "f923f2a7-ab0a-4ed4-9d14-35094f7bd0fd",
       "metadata": {
         "id": "f923f2a7-ab0a-4ed4-9d14-35094f7bd0fd"
@@ -773,7 +773,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "id": "46fccc9d-23b8-45ab-8512-f51a5703159d",
       "metadata": {
         "id": "46fccc9d-23b8-45ab-8512-f51a5703159d"
@@ -810,7 +810,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "id": "459cc83a-ac6c-431d-aa04-3ae358c21877",
       "metadata": {
         "id": "459cc83a-ac6c-431d-aa04-3ae358c21877"
@@ -828,7 +828,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "id": "3b8a4e39-5655-4fe1-934d-34bb5014538b",
       "metadata": {
         "id": "3b8a4e39-5655-4fe1-934d-34bb5014538b"
@@ -867,7 +867,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "id": "72b923a3-457f-48d8-a74b-ee6d1daf6ae3",
       "metadata": {
         "id": "72b923a3-457f-48d8-a74b-ee6d1daf6ae3"
@@ -885,7 +885,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "id": "db632f5e-74d1-4cab-be17-3e27d178d51d",
       "metadata": {
         "id": "db632f5e-74d1-4cab-be17-3e27d178d51d"
@@ -910,7 +910,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "id": "8281aea1-8f54-4be9-bf71-d640a4a43cec",
       "metadata": {
         "id": "8281aea1-8f54-4be9-bf71-d640a4a43cec"
@@ -928,7 +928,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": null,
       "id": "d63c14b5-ff5e-4e46-bfba-b6dab97bf1ce",
       "metadata": {
         "id": "d63c14b5-ff5e-4e46-bfba-b6dab97bf1ce"
@@ -946,7 +946,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": null,
       "id": "8cecd801-8a5b-4517-ad12-2e3248de3150",
       "metadata": {
         "id": "8cecd801-8a5b-4517-ad12-2e3248de3150"
@@ -964,7 +964,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": null,
       "id": "1c8c6b36-7019-4a17-8bf7-cb40d63c2d3e",
       "metadata": {
         "id": "1c8c6b36-7019-4a17-8bf7-cb40d63c2d3e"
@@ -982,7 +982,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": null,
       "id": "q9rMlYfjq_D_",
       "metadata": {
         "id": "q9rMlYfjq_D_"
@@ -1000,7 +1000,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": null,
       "id": "0ZJAtlnWrBQP",
       "metadata": {
         "id": "0ZJAtlnWrBQP"
@@ -1018,7 +1018,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": null,
       "id": "2fhinp8lm09Y",
       "metadata": {
         "id": "2fhinp8lm09Y"
@@ -1040,7 +1040,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": null,
       "id": "f63944f2",
       "metadata": {
         "id": "f63944f2"
@@ -1055,7 +1055,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": null,
       "id": "7e0d623a",
       "metadata": {
         "id": "7e0d623a"
@@ -1069,7 +1069,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": null,
       "id": "1123fd0f",
       "metadata": {
         "id": "1123fd0f"
@@ -1082,7 +1082,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": null,
       "id": "6dc8b06d",
       "metadata": {
         "id": "6dc8b06d"
@@ -1098,7 +1098,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": null,
       "id": "wdbEyNqccK5q",
       "metadata": {
         "id": "wdbEyNqccK5q"
@@ -1114,7 +1114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": null,
       "id": "Li8paTyicQWK",
       "metadata": {
         "id": "Li8paTyicQWK"
@@ -1130,7 +1130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": null,
       "id": "x_qT4FEKcgSw",
       "metadata": {
         "id": "x_qT4FEKcgSw"
@@ -1146,7 +1146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": null,
       "id": "Aa1BK1Cock81",
       "metadata": {
         "id": "Aa1BK1Cock81"
@@ -1162,7 +1162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": null,
       "id": "tkI3k0ntcwmM",
       "metadata": {
         "id": "tkI3k0ntcwmM"
@@ -1178,7 +1178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": null,
       "id": "vL6kNG8ygAeI",
       "metadata": {
         "id": "vL6kNG8ygAeI"
@@ -1194,7 +1194,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": null,
       "id": "Bz-aDM1JgFCi",
       "metadata": {
         "id": "Bz-aDM1JgFCi"
@@ -1210,7 +1210,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": null,
       "id": "Z6zH6zrmgIQm",
       "metadata": {
         "id": "Z6zH6zrmgIQm"
@@ -1226,7 +1226,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": null,
       "id": "EqQJK1lPgMtN",
       "metadata": {
         "id": "EqQJK1lPgMtN"
@@ -1252,12 +1252,12 @@
         "id": "ydHwPHNrAbIg"
       },
       "id": "ydHwPHNrAbIg",
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": null,
       "id": "2526f91a",
       "metadata": {
         "id": "2526f91a"
@@ -1283,7 +1283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": null,
       "id": "34ace0a7-d7a4-40fe-974c-c587f7deb8ef",
       "metadata": {
         "id": "34ace0a7-d7a4-40fe-974c-c587f7deb8ef"
@@ -1334,7 +1334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": null,
       "id": "6863df9f",
       "metadata": {
         "colab": {
@@ -1859,7 +1859,7 @@
         "id": "0RGkdwDAyVT3"
       },
       "id": "0RGkdwDAyVT3",
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2662,7 +2662,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": null,
       "id": "0454e42a",
       "metadata": {
         "id": "0454e42a"
@@ -2680,7 +2680,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": null,
       "id": "fe8fa438",
       "metadata": {
         "id": "fe8fa438"
@@ -2695,7 +2695,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": null,
       "id": "as7zPVIVWHdn",
       "metadata": {
         "id": "as7zPVIVWHdn"
@@ -2716,7 +2716,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": null,
       "id": "38VRgf1KWQOE",
       "metadata": {
         "id": "38VRgf1KWQOE"
@@ -2734,7 +2734,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": null,
       "id": "339a61c4",
       "metadata": {
         "id": "339a61c4"
@@ -2762,7 +2762,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": null,
       "id": "2053b5a3",
       "metadata": {
         "id": "2053b5a3"
@@ -2781,7 +2781,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": null,
       "id": "56366f1f",
       "metadata": {
         "id": "56366f1f",
@@ -3281,6 +3281,11 @@
         "    classification_report,\n",
         ")\n",
         "\n",
+        "X_train = data_train.drop([\"label_value\",\"Subject\",\"Body\",\"Label\"], axis=1)\n",
+        "y_train = data_train[\"label_value\"]\n",
+        "\n",
+        "X_test = data_test.drop([\"label_value\",\"Subject\",\"Body\",\"Label\"], axis=1)\n",
+        "y_test = data_test[\"label_value\"]\n",
         "# ==========================\n",
         "# ตั้งค่า KNN และ MLP (ให้ตรงกับที่ใช้บน test set)\n",
         "# ==========================\n",
@@ -3740,7 +3745,7 @@
       "cell_type": "code",
       "source": [
         "from simpletransformers.classification import ClassificationModel, ClassificationArgs\n",
-        "model_load_final = ClassificationModel(\"roberta\", f\"roberta_model_final\")"
+        "model_load_final = ClassificationModel(\"roberta\", f\"roberta_model_1\")"
       ],
       "metadata": {
         "id": "PsSTTjPmWK4Y"
@@ -4737,7 +4742,7 @@
         "outputId": "9e179234-04f7-44e8-e9cb-2a5fcd57b2ff"
       },
       "id": "UzqYzm-ge00U",
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4885,7 +4890,7 @@
         }
       },
       "id": "mCQ7EQSlqhGt",
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4957,7 +4962,7 @@
         "outputId": "6a7c7b4c-5efb-412c-8f8f-ddb954f09611"
       },
       "id": "WR3PB2effDNc",
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5012,7 +5017,7 @@
         "outputId": "f0fdd3e9-525f-409c-e913-4fd095fcf320"
       },
       "id": "zlc4h-E1fGrk",
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
